tests/macros/expand/mask.stderr
error: option `mask` does not exist for kind `expand`
 --> $DIR/mask.rs:2:44
  |
2 |     let q = discourse::questions![Expand { mask: todo!() }];
  |                                            ^^^^
