tests/macros/expand/mask.rs
fn main() {
    let q = discourse::questions![Expand { mask: todo!() }];
}
